# SE_TicTacToe

./: .gitignore  CMakeLists.txt
include/Controller/: AIPlayer.h  GameController.h
include/Model/: Board.h  GameState.h  Player.h
include/View/: ConsoleView.h
resources/: generate_report.py  report_script.py
src/: main.cpp
src/Controller/: AIPlayer.cpp  GameController.cpp
src/Model/: Board.cpp  GameState.cpp  Player.cpp
src/View/: ConsoleView.cpp
